--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fontsource/oregano": "^4.5.4",
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
